--- a/HopIn/src/app/unregistered-ride-form/unregistered-ride-form.component.css
+++ b/HopIn/src/app/unregistered-ride-form/unregistered-ride-form.component.css
@@ -3,7 +3,7 @@
     width: 300px;
     background-color: white;
     text-align: center;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
 }
 
 h3 {
@@ -11,10 +11,11 @@ h3 {
 }
 
 #tell-us {
-    margin-top: 25px;
+    margin-top: 20px;
 }
 
 #find-route-btn {
+    margin-top: 20px !important;
     border-radius: 7px;
 }
 
@@ -41,16 +42,20 @@ h3 {
 
 mat-form-field {
     font-weight: 500;
-    line-height: 35px;
+    line-height: 30px;
     align-items: center;
     justify-content: center;
-    margin-bottom: 5px;
+    margin-bottom: px;
 }
 
 mat-form-field input{
-    height: 40px;
+    height: 35px;
     font-size: 14px;
     padding-top: 5px;
+}
+
+::ng-deep .mat-form-field-wrapper {
+    padding-bottom: 12px !important;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
