added design for setting report parameters

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
   <toolbar></toolbar>
   <!-- <router-outlet></router-outlet> -->
-  <app-account></app-account>
+  <!-- <app-account></app-account> -->
+  <user-graph></user-graph>
 </div>
