--- a/HopIn/src/app/passenger-account-options/passenger-account-options.component.html
+++ b/HopIn/src/app/passenger-account-options/passenger-account-options.component.html
@@ -1,5 +1,9 @@
 <div id="passenger-account-options-container">
-    <div class="account-options" [routerLink]="['/account-settings']" id="account-settings-option"><span class="responsive-span">account</span> settings</div>
+    <div class="account-options" [routerLink]="['/account-settings']" id="account-settings-option" ><span class="responsive-span">account</span> settings</div>
     <div class="account-options" [routerLink]="['/change-password']" id="password-option"><span class="responsive-span">change</span> password</div>
     <div class="account-options" [routerLink]="['/change-payment-info']" id="payment-info-option"><span class="responsive-span">change</span> payment info</div>
 </div>
+
+<!-- <div class="account-options" [routerLink]="['/account-settings']" id="account-settings-option"><span class="responsive-span">account</span> settings</div>
+<div class="account-options" [routerLink]="['/change-password']" id="password-option"><span class="responsive-span">change</span> password</div>
+<div class="account-options" [routerLink]="['/change-payment-info']" id="payment-info-option"><span class="responsive-span">change</span> payment info</div> -->
