--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -101,6 +101,7 @@ html, body { height: 100%; margin: 0; font-family: "Poppins", sans-serif; }
 .profile-img {
     border-radius: 50%;
     width:85px;
+    height: 85px;
 }
 
  /* COLORS */
