--- a/HopIn/src/app/user-graph/user-graph.component.html
+++ b/HopIn/src/app/user-graph/user-graph.component.html
@@ -42,7 +42,7 @@
             <button id="pdfBtn">Print pdf</button>
         </div>
         <div class="graph">
-
+            <canvas id="myChart"></canvas>
         </div>
     </div>
 </div>
