completed form validation with regex with corresponding error messages

--- a/HopIn/src/app/account-settings/account-settings.component.css
+++ b/HopIn/src/app/account-settings/account-settings.component.css
@@ -33,6 +33,10 @@ mat-form-field{
     width: 65%;
 }
 
+mat-error {
+    margin-left: -5px;
+}
+
 @media screen and (max-width: 1200px) {
     .profile-img-container {
         display: block;
