--- a/HopIn/src/app/account-settings/account-settings.component.html
+++ b/HopIn/src/app/account-settings/account-settings.component.html
@@ -13,13 +13,15 @@
                 <div class="name-form-container">
                     <mat-form-field [hideRequiredMarker]="true" id="name">
                         <mat-label>Name</mat-label>
-                        <input matInput type="text" name="name" formControlName="name" />
+                        <input matInput type="text" name="name" formControlName="name"/>
                         <mat-error *ngIf="accountSettingsForm.get('name')?.errors?.['required']">entering name is required</mat-error>
+                        <mat-error *ngIf="accountSettingsForm.get('name')?.errors?.['pattern']">invalid name format</mat-error>
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Surname</mat-label>
                         <input matInput type="text" name="surname" formControlName="surname" />
                         <mat-error *ngIf="accountSettingsForm.get('surname')?.errors?.['required']">entering surname is required</mat-error>
+                        <mat-error *ngIf="accountSettingsForm.get('surname')?.errors?.['pattern']">invalid surname format</mat-error>
                     </mat-form-field>
                 </div>
             </div>
@@ -31,13 +33,15 @@
             </mat-form-field>
             <mat-form-field>
                 <mat-label>City</mat-label>
-                <input matInput type="text" name="city" formControlName="city" />
-                <mat-error *ngIf="accountSettingsForm.get('city')?.errors?.['required']">entering city is required</mat-error>
+                <input matInput type="text" name="address" formControlName="address" />
+                <mat-error *ngIf="accountSettingsForm.get('address')?.errors?.['required']">entering address is required</mat-error>
+                <mat-error *ngIf="accountSettingsForm.get('address')?.errors?.['pattern']">invalid address format</mat-error>
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Phone number</mat-label>
                 <input matInput type="tel" name="phonenum" formControlName="phonenum" />
                 <mat-error *ngIf="accountSettingsForm.get('phonenum')?.errors?.['required']">entering phone number is required</mat-error>
+                <mat-error *ngIf="accountSettingsForm.get('phonenum')?.errors?.['pattern']">invalid phone number format</mat-error>
             </mat-form-field>
             <button class="conf-button" mat-raised-button type="submit">Save</button>
         </form>
