added ngx autocomplete and google maps api, renamed pickup destination component

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <toolbar></toolbar>
-  <unregistered-ride-form></unregistered-ride-form>
+  <pickup-destination-form></pickup-destination-form>
   <!-- <router-outlet></router-outlet> -->
 </div>
