--- a/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.html
+++ b/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.html
@@ -3,17 +3,17 @@
     <form [formGroup]="rideForm" (ngSubmit)="findRoute()">
         <mat-form-field id="pickup-loc-mat">
             <mat-label>Pick up location</mat-label>
-            <input matInput type="text" name="pickup" formControlName="pickup"/>
+            <input matInput type="text" name="pickup" formControlName="pickup" ngx-google-places-autocomplete #placesRef="ngx-places"/>
             <mat-icon class="location-icon" matPrefix>location_on</mat-icon>
             <mat-error *ngIf="rideForm.get('pickup')?.errors?.['required']">entering pickup location is required</mat-error>
         </mat-form-field>
         <mat-form-field id="pickup-loc-mat">
             <mat-label>Where to?</mat-label>
-            <input matInput type="text" name="destination" formControlName="destination"/>
+            <input matInput type="text" name="destination" formControlName="destination" ngx-google-places-autocomplete #placesRef="ngx-places"/>
             <mat-icon class="location-icon" matPrefix>location_on</mat-icon>
             <mat-error *ngIf="rideForm.get('destination')?.errors?.['required']">entering destination is required</mat-error>
         </mat-form-field>
-        <div id="pickup-time">
+        <div id="pickup-time" *ngIf="role === 'USER'">
             <mat-form-field>
                 <mat-label>Schedule for later</mat-label>
                 <input matInput [ngxTimepicker]="picker" [format]="24" formControlName="time">
