finished responsive design for account component

--- a/HopIn/src/app/account/account.component.html
+++ b/HopIn/src/app/account/account.component.html
@@ -3,6 +3,6 @@
         <account-details></account-details>
         <favourite-routes></favourite-routes>
     </div>
-    <div class="row"></div>
+    <user-graph></user-graph>
 </div>
 
