--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div>
   <toolbar></toolbar>
   <!-- <router-outlet></router-outlet> -->
-  <!-- <app-account></app-account> -->
-  <user-graph></user-graph>
+  <app-account></app-account>
 </div>
