--- a/HopIn/src/app/user-graph/user-graph.component.html
+++ b/HopIn/src/app/user-graph/user-graph.component.html
@@ -34,10 +34,16 @@
     <div id="reportContainer">
         <div class="column">
             <h2>Report</h2>
-            <p class="title">Total:</p>
-            <p id="total">120km</p>
-            <p class="title">Average:</p>
-            <p id="average">30km</p>
+            <div>
+                <div>
+                    <p class="title">Total:</p>
+                    <p id="total">120km</p>
+                </div>
+                <div>
+                    <p class="title">Average:</p>
+                    <p id="average">30km</p>
+                </div>
+            </div>
             <div></div>
             <button id="pdfBtn">Print pdf</button>
         </div>
