added styles to autocomplete

--- a/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.css
+++ b/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.css
@@ -75,3 +75,9 @@ mat-label {
 form {
     height: fit-content;
 }
+
+::ng-deep .pac-container {
+    width: 280px !important;
+    margin-left: -33px !important;
+    margin-top: 3px !important;
+}
