fixed design in account details to match user model

--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -27,8 +27,8 @@
     </div>
     <div class="data">
         <div class="keyValue">
-            <p class="key">City:</p>
-            <p id="city" class="value">Novi Sad</p>
+            <p class="key">Address:</p>
+            <p id="address" class="value">Novi Sad</p>
         </div>
     </div>
 
