--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -1,7 +1,7 @@
 <div id="account-container">
     <img src="../../assets/vectors/profileAvatar.svg">
   
-    <p id="userName">Grace Collins</p>
+    <p id="userName">{{ passenger.name + " " + passenger.surname }}</p>
     <p class="roleText" >passenger</p>
 
     <!-- CONTACT INFO -->
@@ -12,11 +12,11 @@
     <div class="data">
         <div class="keyValue">
             <p class="key">Email:</p>
-            <p id="email" class="value">email@gmail.com</p>
+            <p id="email" class="value">{{ passenger.email }}</p>
         </div>
         <div class="keyValue">
             <p class="key">Phone number:</p>
-            <p id="phoneNumber" class="value">063245645</p>
+            <p id="phoneNumber" class="value">{{ passenger.telephoneNumber }}</p>
         </div>
     </div>
 
@@ -28,12 +28,12 @@
     <div class="data">
         <div class="keyValue">
             <p class="key">Address:</p>
-            <p id="address" class="value">Novi Sad</p>
+            <p id="address" class="value">{{ passenger.address }}</p>
         </div>
     </div>
 
 
-     <!-- CONTACT INFO -->
+     <!-- PAYMENT INFO -->
      <div class="sectionTitle">
         <p>Payment Info</p>
         <div class="line"></div>
