--- a/HopIn/src/app/user-graph/user-graph.component.css
+++ b/HopIn/src/app/user-graph/user-graph.component.css
@@ -112,7 +112,7 @@ p {
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #337D98;
   }
 
   #generateBtn {
