added map component with displayed google map

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <toolbar></toolbar>
-  <pickup-destination-form></pickup-destination-form>
+  <map></map>
   <!-- <router-outlet></router-outlet> -->
 </div>
