fixed error of changing colors in account options

--- a/HopIn/src/app/change-password/change-password.component.html
+++ b/HopIn/src/app/change-password/change-password.component.html
@@ -6,11 +6,15 @@
                 <mat-label>Enter old password</mat-label>
                 <input matInput type="password" name="old-password" formControlName="oldPassword" />
                 <mat-error *ngIf="changePasswordForm.get('oldPassword')?.errors?.['required']">entering password is required</mat-error>
+                <mat-error *ngIf="changePasswordForm.get('oldPassword')?.errors?.['pattern']">incorrect input</mat-error>                    
+                <mat-error *ngIf="changePasswordForm.get('oldPassword')?.errors?.['minLength']">password needs min 6 char</mat-error>                                  
               </mat-form-field>
               <mat-form-field>
                 <mat-label>Enter new password</mat-label>
                 <input matInput type="password" name="new-password" formControlName="newPassword" [errorStateMatcher]="confirmValidParentMatcher"/>
                 <mat-error *ngIf="changePasswordForm.get('newPassword')?.errors?.['required']">entering new password is required</mat-error>
+                <mat-error *ngIf="changePasswordForm.get('newPassword')?.errors?.['pattern']">incorrect input</mat-error>
+                <mat-error *ngIf="changePasswordForm.get('newPassword')?.errors?.['minLength']">password needs min 6 char</mat-error>                                  
               </mat-form-field>
               <mat-form-field>
                 <mat-label>Confirm new password</mat-label>
