added service for getting favorite routes from backend api, and binding result to favourite routes component

--- a/HopIn/src/app/favourite-routes/favourite-routes.component.html
+++ b/HopIn/src/app/favourite-routes/favourite-routes.component.html
@@ -6,7 +6,7 @@
         <img src="../../assets/vectors/map.svg">
 
         <div class="cardInfo">
-            <p>{{ route.from + " -> " + route.to }}</p>
+            <p>{{ route.departure.address + " -> " + route.destination.address }}</p>
             <div class="row">
                 <img src="../../assets/vectors/distance.svg">
                 <p class="key">Distance:</p>
@@ -15,7 +15,7 @@
             <div class="row">
                 <img class="hidden" src="../../assets/vectors/distance.svg">
                 <p class="key">Duration:</p>
-                <p class="value">{{ route.durationHours + "h " + route.durationMins + "min" }}</p>
+                <p class="value">{{ "0h " +  "45min" }}</p>
             </div>
         </div>
         
