--- a/HopIn/src/app/favourite-routes/favourite-routes.component.css
+++ b/HopIn/src/app/favourite-routes/favourite-routes.component.css
@@ -112,6 +112,26 @@ h2 {
 
 }
 
+/* width */
+#favourite-rides-container::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+#favourite-rides-container::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+#favourite-rides-container::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+#favourite-rides-container::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+
 @media only screen and (max-width: 900px) {
     #favourite-rides-container {
         height: fit-content;
