tried to postion map to fill height, almost there

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div>
-  <toolbar></toolbar>
-  <pickup-destination-form></pickup-destination-form>
-  <map></map>
+<div style="height: 100%;">
+  <toolbar style="z-index: 100;"></toolbar>
+  <div id="content">
+    <order-ride></order-ride>
+  </div>
+  
   <!-- <router-outlet></router-outlet> -->
 </div>
