--- a/HopIn/src/styles.css
+++ b/HopIn/src/styles.css
@@ -4,10 +4,10 @@
 body {
     margin: 0;
     background-color: #F9F9F9;
+    position: relative;
 }
 
-html, body { height: 100%; margin: 0; font-family: "Poppins", sans-serif; }
-
+html, body { height: 100%; width: 100%; margin: 0; font-family: "Poppins", sans-serif; }
 
 .title {
     margin-top: 0px;
