added routing to order ride page

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div style="height: 100%;">
   <toolbar style="z-index: 100;"></toolbar>
   <div id="content">
-    <order-ride></order-ride>
+    <router-outlet></router-outlet>
   </div>
-  
-  <!-- <router-outlet></router-outlet> -->
 </div>
