--- a/HopIn/src/app/landing/landing.component.html
+++ b/HopIn/src/app/landing/landing.component.html
@@ -14,7 +14,7 @@
             <div id="right-content">
                 <h2 class="smaller-prompt">Not sure if we can offer<br class="br"> you a good deal?</h2>
                 <p class="subtitle">Check out our map and see the cost and duration of the ride we got waiting for you!</p>
-                <button class="conf-button back-orange" mat-raised-button>go to the map</button>
+                <button class="conf-button back-orange" mat-raised-button [routerLink]="['/order-ride']">go to the map</button>
             </div>
         </div>
     </div>
