fixed contet sizing

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="height: 100%;">
-  <toolbar style="z-index: 100;"></toolbar>
+  <toolbar></toolbar>
   <div id="content">
     <router-outlet></router-outlet>
   </div>
