fixed bug in user-graph component when displaying chart

--- a/HopIn/src/app/user-graph/user-graph.component.css
+++ b/HopIn/src/app/user-graph/user-graph.component.css
@@ -103,7 +103,10 @@ p {
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
