--- a/HopIn/src/app/account-details/account-details.component.html
+++ b/HopIn/src/app/account-details/account-details.component.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <button>Account settings</button>
+    <button mat-raised-button [routerLink]="['/account-settings']">Account settings</button>
 
 
 
