--- a/HopIn/src/app/favourite-routes/favourite-routes.component.css
+++ b/HopIn/src/app/favourite-routes/favourite-routes.component.css
@@ -109,7 +109,10 @@ h2 {
 .favourite {
     margin-left: 15px;
     margin-right: 15px;
+}
 
+.favourite:hover {
+    cursor: pointer;
 }
 
 /* width */
