--- a/HopIn/src/app/favourite-routes/favourite-routes.component.html
+++ b/HopIn/src/app/favourite-routes/favourite-routes.component.html
@@ -2,7 +2,7 @@
     <h2>Favourite Routes</h2>
     <div class="line"></div>
 
-    <div class="historyCard" *ngFor="let route of routes">
+    <div class="historyCard" *ngFor="let route of routes; let indexOfelement=index;">
         <img src="../../assets/vectors/map.svg">
 
         <div class="cardInfo">
@@ -22,8 +22,8 @@
         <div id="btnAndHeart">
             <button></button>
 
-            <!-- <img class="favourite" src="../../assets/vectors/heart_empty.svg"> -->
-            <img class="favourite" src="../../assets/vectors/heart_red.svg">
+            <img *ngIf="this.isFavourite[indexOfelement] === false" class="favourite" src="../../assets/vectors/heart_empty.svg">
+            <img *ngIf="this.isFavourite[indexOfelement] === true" class="favourite" src="../../assets/vectors/heart_red.svg">
         </div>
     </div>
 
